--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
           <br />
           <div class="block">
               <h2>Mes sports</h2>
-              <p class="select">Je pratique depuis <span class="strike">pas mal de temps</span> LONGTEMPS du <b>tennis</b>. Plus récemment, je me suis mis au <b>tir sportif</b> <i>(rien à voir avec du tir à l'arc, car là, c'est avec un pistolet qui fait autant de bruit que ton voisin sadique qui te réveille en tondant sa pelouse le dimanche)</i>. C'est un sport que j'aime beaucoup, car il permet d'entretenir un bon mental.</p>
+              <p class="select">Je pratique depuis <span class="strike">pas mal de temps</span> LONGTEMPS du <b>tennis</b>. Plus récemment, je me suis mis au <b>tir sportif</b> <i>(rien à voir avec du tir à l'arc, car là, c'est avec un pistolet qui fait autant de bruit que ton voisin sadique lorsqu'il te réveille en tondant sa pelouse le dimanche)</i>. C'est un sport que j'aime beaucoup, car il permet d'entretenir un bon mental.</p>
           </div>
           <br />
           <div class="block">
             <h2>Mes compétences</h2>
             <ul>
-              <li><span>- Développement</span><progress min="0" max="100" value="99"></progress></li>
-              <li><span>- Tir sportif</span><progress min="0" max="100" value="70"></progress></li>
-              <li><span>- Faire rire (à toi de me noter)</span><input type="range" /></li>
-              <li><span>- Mes notes en français</span><i>⚠️ Erreur : La barre de progression ne peut prendre une valeur négative !</i></li>
+              <li><span>Développement</span><progress min="0" max="100" value="99"></progress></li>
+              <li><span>Tir sportif</span><progress min="0" max="100" value="70"></progress></li>
+              <li><span>Faire rire (à toi de me noter)</span><input type="range" /></li>
+              <li><span>Mes notes en français</span><i>⚠️ Erreur : La barre de progression ne peut prendre une valeur négative !</i></li>
             </ul>
           </div>
 
