--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Ma présentation</title>
+        <title>Mon profil !</title>
         <meta charset="UTF-8" />
 
         <link rel="stylesheet" href="css/fonts.css" />
